<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.csulb.android.tacopronto.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/taco_image"
            android:src="@drawable/mexicantacos" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/taco_pronto"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/address" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_number_hint"
            android:inputType="phone" />

        <TextView
            android:id="@+id/header_size"
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_size" />

        <RadioGroup
            android:id="@+id/radio_group_size"
            style="@style/RadioGroupStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_large"
                style="@style/RadioButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/radio_button_large" />

            <RadioButton
                android:id="@+id/radio_button_medium"
                style="@style/RadioButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/radio_button_medium" />

        </RadioGroup>

        <TextView
            android:id="@+id/header_tortilla"
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_tortilla" />

        <RadioGroup
            android:id="@+id/radio_group_tortilla"
            style="@style/RadioGroupStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_corn"
                style="@style/RadioButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/radio_button_corn" />

            <RadioButton
                android:id="@+id/radio_button_flour"
                style="@style/RadioButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/radio_button_flour" />

        </RadioGroup>

        <TextView
            android:id="@+id/header_fillings"
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_fillings" />

        <CheckBox
            android:id="@+id/checkbox_beef"
            style="@style/CheckBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_filling_beef" />

        <CheckBox
            android:id="@+id/checkbox_chicken"
            style="@style/CheckBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_filling_chicken" />

        <CheckBox
            android:id="@+id/checkbox_white_fish"
            style="@style/CheckBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_filling_white_fish" />

        <CheckBox
            android:id="@+id/checkbox_sea_food"
            style="@style/CheckBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_filling_sea_food" />

        <CheckBox
            android:id="@+id/checkbox_cheese"
            style="@style/CheckBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_filling_cheese" />

        <CheckBox
            android:id="@+id/checkbox_rice"
            style="@style/CheckBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_filling_rice" />

        <CheckBox
            android:id="@+id/checkbox_beans"
            style="@style/CheckBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_filling_beans" />

        <CheckBox
            android:id="@+id/checkbox_pico_de_gallo"
            style="@style/CheckBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_filling_pico_de_gallo" />

        <CheckBox
            android:id="@+id/checkbox_guacamole"
            style="@style/CheckBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_filling_guacamole" />

        <CheckBox
            android:id="@+id/checkbox_lbt"
            style="@style/CheckBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_filling_lbt" />

        <TextView
            android:id="@+id/header_Beverage"
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_beverage" />

        <CheckBox
            android:id="@+id/checkbox_soda"
            style="@style/CheckBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_beverage_soda" />

        <CheckBox
            android:id="@+id/checkbox_cerveza"
            style="@style/CheckBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_beverage_cerveza" />

        <CheckBox
            android:id="@+id/checkbox_margarita"
            style="@style/CheckBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_beverage_margarita" />

        <CheckBox
            android:id="@+id/checkbox_tequila"
            style="@style/CheckBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_beverage_tequila" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text" />

    </LinearLayout>
</ScrollView>
